implement create paste route and migrations
