# internal/controller/http/v1/paste/handler.go
@@ -1,11 +1,17 @@
 package paste
 
 import (
+	"context"
+	"errors"
+	"fmt"
 	"net/http"
+	"time"
 
 	"github.com/go-chi/chi/v5"
 	"github.com/go-chi/render"
 	"github.com/romankravchuk/pastebin/internal/controller/http/response"
+	"github.com/romankravchuk/pastebin/internal/converter"
+	"github.com/romankravchuk/pastebin/internal/entity"
 	"github.com/romankravchuk/pastebin/internal/usecase"
 	"github.com/romankravchuk/pastebin/pkg/log"
 	"github.com/romankravchuk/pastebin/pkg/validator"
@@ -14,12 +20,15 @@ import (
 type handler struct {
 	l  *log.Logger
 	uc usecase.Pastes
+
+	tm time.Duration
 }
 
 func New(mux chi.Router, uc usecase.Pastes, l *log.Logger) {
 	p := &handler{
 		l:  l,
 		uc: uc,
+		tm: 10 * time.Second,
 	}
 
 	mux.Route("/pastes", func(r chi.Router) {
@@ -35,21 +44,14 @@ func New(mux chi.Router, uc usecase.Pastes, l *log.Logger) {
 //	@tags		pastes
 //	@accept		json
 //	@produce	json
-//	@param		paste	body		CreatePasteBody	true	"Паста"
-//	@success	200		{object}	any{message=string}
+//	@param		paste	body		entity.CreatePasteBody	true	"Паста"
+//	@success	200		{object}	any{message=string,data=any{paste=entity.PasteResponse,url=string}}
 //	@router		/pastes [post]
-func (p *handler) HandleCreatePaste(w http.ResponseWriter, r *http.Request) {
-	var input struct {
-		Text       string `json:"text" validate:"required"`
-		ExpireTime string `json:"expireTime" validate:"required,oneof=30m 1h 1d 1w 1mth 6mth 2yr"`
-		UserID     string `json:"userID" validate:"omitempty,uuid"`
-		Password   string `json:"password" validate:"omitempty"`
-		Title      string `json:"title" validate:"omitempty"`
-		Format     string `json:"format" validate:"required,oneof=txt html markdown latex json xml yaml ini csv tsv url binary"`
-	}
+func (h *handler) HandleCreatePaste(w http.ResponseWriter, r *http.Request) {
+	input := new(entity.CreatePasteBody)
 
 	if err := render.DecodeJSON(r.Body, &input); err != nil {
-		p.l.Error("failed to parse input data", err,
+		h.l.Error("failed to parse input data", err,
 			log.FF{
 				{Key: "input", Value: input},
 			})
@@ -61,7 +63,7 @@ func (p *handler) HandleCreatePaste(w http.ResponseWriter, r *http.Request) {
 
 	v, err := validator.New()
 	if err != nil {
-		p.l.Error("failed to create validator", err,
+		h.l.Error("failed to create validator", err,
 			log.FF{
 				{Key: "input", Value: input},
 			})
@@ -74,7 +76,7 @@ func (p *handler) HandleCreatePaste(w http.ResponseWriter, r *http.Request) {
 	if !v.Valid(input) {
 		errs := v.Errors()
 
-		p.l.Info("failed to validate input data", log.FF{
+		h.l.Info("failed to validate input data", log.FF{
 			{Key: "input", Value: input},
 			{Key: "errors", Value: errs},
 		})
@@ -84,8 +86,36 @@ func (p *handler) HandleCreatePaste(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
+	ctx, cancel := context.WithTimeout(r.Context(), h.tm)
+	defer cancel()
+
+	e := converter.CreatePasteToEntity(input)
+
+	err = h.uc.Create(ctx, e)
+	if err != nil {
+		switch {
+		case errors.Is(err, context.Canceled):
+			return
+		default:
+			h.l.Error("failed to create paste", err, log.FF{
+				{Key: "input", Value: input},
+			})
+
+			response.InternalServerError(w, r)
+		}
+
+		return
+	}
+
+	location := fmt.Sprintf("%s/%s", r.URL.Path, e.Hash)
+
+	w.Header().Add("Location", location)
 	response.OK(w, r, render.M{
 		"message": "ok",
+		"data": render.M{
+			"location": location,
+			"paste":    converter.ModelToResponse(e),
+		},
 	})
 }
 
@@ -99,7 +129,7 @@ func (p *handler) HandleCreatePaste(w http.ResponseWriter, r *http.Request) {
 //	@success	200		{object}	any{message=string}
 //	@failure	400		{object}	any{error=string}
 //	@router		/pastes/{hash} [get]
-func (p *handler) HandleGetPasteByHash(w http.ResponseWriter, r *http.Request) {
+func (h *handler) HandleGetPasteByHash(w http.ResponseWriter, r *http.Request) {
 	response.OK(w, r, render.M{
 		"message": "ok",
 	})
@@ -115,7 +145,7 @@ func (p *handler) HandleGetPasteByHash(w http.ResponseWriter, r *http.Request) {
 //	@success	200		{object}	any{message=string}
 //	@security	Bearer
 //	@router		/pastes/{hash} [delete]
-func (p *handler) HandleDeletePaste(w http.ResponseWriter, r *http.Request) {
+func (h *handler) HandleDeletePaste(w http.ResponseWriter, r *http.Request) {
 	response.OK(w, r, render.M{
 		"message": "ok",
 	})
